# appium-mcp-claude-android

./: .gitignore  .mcp.json  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SETUP_GUIDE.md  install-remote.sh  install.sh  pyproject.toml  requirements.txt  setup.py
config/: appium.example.json
mcp_appium/: __init__.py  action_types.py  appium_manager.py  bridge.py  cli.py  config.py  device_manager.py  installer.py  llm_client.py  node_parser.py  prompt.py  server.py
