[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-appium"
version = "0.1.0"
description = "MCP Server for Appium mobile automation with auto-detection and setup"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "appium-python-client>=3.2.1",
    "anthropic>=0.31.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-appium"
Documentation = "https://github.com/yourusername/mcp-appium#readme"
Repository = "https://github.com/yourusername/mcp-appium.git"
Issues = "https://github.com/yourusername/mcp-appium/issues"

[project.scripts]
mcp-appium = "mcp_appium.server:main"
mcp-appium-install = "mcp_appium.installer:main"

[tool.setuptools]
packages = ["mcp_appium"]

[tool.setuptools.package-data]
mcp_appium = ["config/*.json"]
